--- a/luminance-glutin/Cargo.toml
+++ b/luminance-glutin/Cargo.toml
@@ -17,7 +17,7 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 gl = "0.13"
-glutin = { version = "0.21", default-features = false }
+glutin = { version = "0.22.0-alpha5", default-features = false }
 luminance = "0.37"
 luminance-windowing = "0.8"
 
