--- a/luminance-std140/Cargo.toml
+++ b/luminance-std140/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "Std140 types and trait for OpenGL-based luminance backends"
-keywords = ["stateless", "type-safe", "graphics", "luminance", "opengl", "std140"]
+keywords = ["stateless", "type-safe", "graphics", "luminance", "std140"]
 categories = ["rendering::graphics-api"]
 homepage = "https://github.com/phaazon/luminance-rs"
 repository = "https://github.com/phaazon/luminance-rs"
