--- a/luminance-front/Cargo.toml
+++ b/luminance-front/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luminance-front"
-version = "0.6.0"
+version = "0.6.1"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "luminance re-exported with a backend picked at compile-time"
@@ -24,7 +24,7 @@ gl33-GL_ARB_gpu_shader_fp64 = ["luminance-gl/GL_ARB_gpu_shader_fp64"] # 64-bit s
 webgl2 = ["luminance-webgl"] # WebGL2 backend
 
 [dependencies]
-luminance = { version = "0.46", path = "../luminance" }
+luminance = { version = ">=0.46, <0.48", path = "../luminance" }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 luminance-gl = { version = "0.19", path = "../luminance-gl", optional = true }
