--- a/luminance-glfw/Cargo.toml
+++ b/luminance-glfw/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luminance-glfw"
-version = "0.18.0"
+version = "0.18.1"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "GLFW support for luminance"
@@ -19,7 +19,7 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 gl = "0.14"
 glfw = { version = "0.43", default-features = false }
-luminance = { version = "0.46", path = "../luminance" }
+luminance = { version = ">=0.46, <0.48", path = "../luminance" }
 luminance-gl = { version = "0.19", path = "../luminance-gl" }
 
 [features]
