--- a/luminance-web-sys/Cargo.toml
+++ b/luminance-web-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luminance-web-sys"
-version = "0.5.0"
+version = "0.5.1"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "web-sys luminance platform"
@@ -14,7 +14,7 @@ edition = "2021"
 rust-version = "1.56.0"
 
 [dependencies]
-luminance = { version = "0.46", path = "../luminance" }
+luminance = { version = ">=0.46, <0.48", path = "../luminance" }
 luminance-webgl = { version = "0.6", path = "../luminance-webgl" }
 wasm-bindgen = "0.2.63"
 
