--- a/luminance-webgl/Cargo.toml
+++ b/luminance-webgl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luminance-webgl"
-version = "0.6.0"
+version = "0.6.1"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "WebGL backend for luminance"
@@ -17,7 +17,7 @@ rust-version = "1.56.0"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-luminance = { version = "0.46", path = "../luminance" }
+luminance = { version = ">=0.46, <0.48", path = "../luminance" }
 luminance-std140 = { version = "0.2", path = "../luminance-std140" }
 serde = "1"
 serde_derive = "1"
