--- a/luminance-derive/Cargo.toml
+++ b/luminance-derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luminance-derive"
-version = "0.10.0"
+version = "0.11.0-dev"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "Procedural macros for deriving luminance traits"
