--- a/luminance/Cargo.toml
+++ b/luminance/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "luminance"
-version = "0.47.0"
+version = "0.48.0-dev"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
 description = "Stateless and type-safe graphics framework"
@@ -21,6 +21,6 @@ default = ["derive"]
 derive = ["luminance-derive"]
 
 [dependencies.luminance-derive]
-version = "0.10.0"
+version = "0.11.0-dev"
 path = "../luminance-derive"
 optional = true
