--- a/luminance/Cargo.toml
+++ b/luminance/Cargo.toml
@@ -20,7 +20,6 @@ maintenance = { status = "actively-developed" }
 default = ["derive"]
 derive = ["luminance-derive"]
 
-[dependencies.luminance-derive]
-version = "0.11.0-dev"
-path = "../luminance-derive"
-optional = true
+[dependencies]
+luminance-derive = { version = "0.11.0-dev", path = "../luminance-derive", optional = true }
+mint = { version = "0.5.9", optional = true }
