Feature "derive" -> "luminance-derive".
luminance-derive is already an optional crate, which automatically
brings its name as feature gate. So we should be use it.

--- a/luminance/Cargo.toml
+++ b/luminance/Cargo.toml
@@ -17,8 +17,7 @@ rust-version = "1.56.0"
 maintenance = { status = "actively-developed" }
 
 [features]
-default = ["derive"]
-derive = ["luminance-derive"]
+default = ["luminance-derive"]
 
 [dependencies]
 luminance-derive = { version = "0.11.0-dev", path = "../luminance-derive", optional = true }
