--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
   "luminance",
   "luminance-derive",
   # "luminance-front",
-  "luminance-gl",
+  "luminance-gl2",
   # "luminance-glfw",
   # "luminance-glutin",
   # "luminance-sdl2",
@@ -22,7 +22,7 @@ default-members = [
   "luminance",
   "luminance-derive",
   # "luminance-front",
-  "luminance-gl",
+  "luminance-gl2",
   # "luminance-glfw",
   # "luminance-glutin",
   #"luminance-sdl2", # commented out because of <https://github.com/Rust-SDL2/rust-sdl2/issues/1029>
