luminance-glfw migration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
   "luminance-derive",
   # "luminance-front",
   "luminance-gl2",
-  # "luminance-glfw",
+  "luminance-glfw",
   # "luminance-glutin",
   # "luminance-sdl2",
   # "luminance-std140",
@@ -23,7 +23,7 @@ default-members = [
   "luminance-derive",
   # "luminance-front",
   "luminance-gl2",
-  # "luminance-glfw",
+  "luminance-glfw",
   # "luminance-glutin",
   #"luminance-sdl2", # commented out because of <https://github.com/Rust-SDL2/rust-sdl2/issues/1029>
   # "luminance-std140",
