--- a/examples/desktop/Cargo.toml
+++ b/examples/desktop/Cargo.toml
@@ -25,9 +25,8 @@ env_logger = "0.9.0"
 glfw = "0.45"
 image = "0.24.1"
 log = "0.4.11"
-luminance = { version = "0.47", path = "../../luminance" }
+luminance = { version = "0.48.0-dev", path = "../../luminance", features = ["mint"] }
 luminance-examples = { version = "0.1", path = "../common" }
-luminance-front = { version = "0.6", path = "../../luminance-front" }
-luminance-gl = { version = "0.19", path = "../../luminance-gl" }
-luminance-glfw = { version = "0.18", path = "../../luminance-glfw" }
+luminance-gl2 = { version = "0.20.0-dev", path = "../../luminance-gl" }
+luminance-glfw = { version = "0.19.0-dev", path = "../../luminance-glfw" }
 structopt = "0.3.21"
