--- a/luminance-gl2/Cargo.toml
+++ b/luminance-gl2/Cargo.toml
@@ -24,6 +24,7 @@ GL_ARB_gpu_shader_fp64 = []
 
 [dependencies]
 gl = "0.14"
+log = { version = "0.4.17", optional = true }
 luminance = { version = "0.48.0-dev", path = "../luminance" }
 # luminance-std140 = { version = "0.2", path = "../luminance-std140" }
 mint = { version = "0.5.9", optional = true }
