--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -17,6 +17,7 @@ funtest = []
 funtest-gl33-f64-uniform = []
 
 [dependencies]
+cgmath = "0.18.0"
 env_logger = "0.9.0"
 log = "0.4.11"
 luminance = { version = "0.48.0-dev", path = "../../luminance", features = ["mint"] }
