--- a/luminance/Cargo.toml
+++ b/luminance/Cargo.toml
@@ -18,6 +18,7 @@ maintenance = { status = "actively-developed" }
 
 [features]
 default = ["luminance-derive"]
+shader-f64 = []
 
 [dependencies]
 luminance-derive = { version = "0.11.0-dev", path = "../luminance-derive", optional = true }
