--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -14,7 +14,7 @@ rust-version = "1.65.0"
 
 [features]
 funtest = []
-funtest-gl33-f64-uniform = []
+funtest-gl33-f64-uniform = ["luminance/shader-f64"]
 
 [dependencies]
 cgmath = "0.18.0"
