--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,23 +68,23 @@ jobs:
   #         yarn install
   #         yarn build
 
-  # functional-tests-desktop:
-  #   strategy:
-  #     matrix:
-  #       rustc: ["nightly"]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Install dependencies
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y libxrandr-dev xorg-dev libsdl2-dev
-  #     - uses: actions/checkout@v2
-  #     - name: Functional testing
-  #       run: |
-  #         rustup default ${{ matrix.rustc }}
-  #         cd examples/desktop
-  #         cargo check --features funtest,funtest-gl33-f64-uniform
-  #
+  functional-tests-desktop:
+    strategy:
+      matrix:
+        rustc: ["nightly"]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxrandr-dev xorg-dev libsdl2-dev
+      - uses: actions/checkout@v2
+      - name: Functional testing
+        run: |
+          rustup default ${{ matrix.rustc }}
+          cd examples/desktop
+          cargo check --features funtest,funtest-gl33-f64-uniform
+  
   # functional-tests-web:
   #   strategy:
   #     matrix:
